pod.yml
kind: Namespace
apiVersion: v1
metadate:
  name: nginx
  namespace: nginx
spec:
  containers:
  name: nginx
  image: nginx: latest
  ports:
    - containerPort: 80
